[package]
name = "md-todo-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
regex = "1"
async-trait = "0.1"
tracing-subscriber = "0.3"
